--- a/src/components/AppBar/_app-bar.scss
+++ b/src/components/AppBar/_app-bar.scss
@@ -1,3 +1,24 @@
+.app-bar {
+  &__drawer {
+    background-color: #eeeeee;
+    color: #0000008a;
+    height: 100vh;
+
+    .dark & {
+      color: #eeeeee;
+      background-color: #20262d;
+    }
+
+    hr {
+      border-color: #3b3b3b8a;
+    }
+  }
+
+  .dark &__mode-switch {
+    color: #eeeeee;
+  }
+}
+
 .app-theme-toggle {
   margin-left: auto;
 }
