--- a/src/components/List/_list.scss
+++ b/src/components/List/_list.scss
@@ -32,6 +32,7 @@ $easing: cubic-bezier(0.51, 0.92, 0.24, 1.15);
       span,
       p {
         cursor: text;
+        color: #000;
       }
     }
 
