--- a/src/components/List/_list.scss
+++ b/src/components/List/_list.scss
@@ -44,7 +44,7 @@ $easing: cubic-bezier(0.51, 0.92, 0.24, 1.15);
     &.swipe--out {
       max-height: 0;
       margin: 0;
-      transform: translateX(200%) scaleX(0.00001);
+      transform: translateX(150vw);
       transition: transform 0.5s $easing, max-height 0.5s $easing,
         margin 0.5s $easing, opacity 0.25s;
     }
