change opacity when swiped out"

--- a/src/components/List/_list.scss
+++ b/src/components/List/_list.scss
@@ -15,7 +15,6 @@ $easing: cubic-bezier(0.51, 0.92, 0.24, 1.15);
   padding: 7rem 0 0;
   position: relative;
   width: 90vw;
-  touch-action: pan-down;
 
   &__item > div {
     width: 85vw;
@@ -49,6 +48,7 @@ $easing: cubic-bezier(0.51, 0.92, 0.24, 1.15);
     &.swipe--out {
       max-height: 0;
       margin: 0;
+      opacity: 0;
       transform: translateX(150vw);
       transition: transform 0.5s $easing, max-height 0.5s $easing,
         margin 0.5s $easing, opacity 0.25s;
